# skills-summarizer

./: .env.example  .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
data/: example1  example2
output/computing-average-from-scraped-ratings/: SKILL.md
output/computing-average-from-scraped-ratings/scripts/: compute_average.py
output/retrieving-movie-box-office-revenue/: SKILL.md
scripts/: run_summarize.sh  run_test.sh
skills_summarize_agent/: SKILL.md  __init__.py  config.py  run_summarize.py  skill_summarizer_agent.py  tools.py
