[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-summarize-agent"
version = "0.1.0"
description = "Extract reusable SKILL.md from agent execution logs (JSONL)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
